# VKLOD-Sample

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
shaders/: dh_bindings.h  pathtrace.rchit.glsl  pathtrace.rgen.glsl  pathtrace.rmiss.glsl  pathtrace_device_host.h  pathtrace_payload.h  rasterize.frag.glsl  rasterize.mesh.glsl  rasterize_device_host.h  shaders_buffer_ref.h  shaders_frame_params.h  shaders_glm.h  shaders_lod_structs.h  shaders_scene.h  shaders_stream.h  stream_fill_clas_input.comp.glsl  stream_make_requests.comp.glsl  stream_modify_groups.comp.glsl  stream_pack_clas.comp.glsl  traverse.comp.glsl  traverse_device_host.h  traverse_init.comp.glsl  traverse_sort_instances.comp.glsl  traverse_verify.comp.glsl  write_instances.comp.glsl
src/: acceleration_structures.cpp  acceleration_structures.hpp  debug_range_summary.hpp  gltf_view.hpp  lod_streaming_jobs.cpp  lod_streaming_jobs.hpp  lod_streaming_scene.cpp  lod_streaming_scene.hpp  lod_traverser.cpp  lod_traverser.hpp  main.cpp  meshops_array_view.h  nvhiz_vk.cpp  nvhiz_vk.hpp  renderer_common.cpp  renderer_common.hpp  renderer_rasterize.cpp  renderer_rasterize.hpp  renderer_raytrace.cpp  renderer_raytrace.hpp  sample_allocation.hpp  sample_app_element.hpp  sample_camera_paths.cpp  sample_camera_paths.hpp  sample_glsl_compiler.hpp  sample_image.hpp  sample_producer_consumer.hpp  sample_raytracing_objects.hpp  sample_vulkan_objects.hpp  scene.cpp  scene.hpp
